results card chages worker info stats